made changes to api for json payloads
